<resources>
    <string name="app_name">Dino Pedia</string>
    <string name="info_fruit_icon">foto famili</string>
    <string name="info_fruit_name">nama famili</string>
    <string name="info_fruit_desc">deskripsi famili</string>
    <string name="info_fruit_characteristic">karakteristik Famili</string>
    <string name="info_fruit_kelompok">kelompok Famili</string>
    <string name="info_fruit_habitat">habitat famili</string>
    <string name="info_fruit_makananan">makanan famili</string>
    <string name="info_fruit_panjang">Panjang famili</string>
    <string name="info_fruit_tinggi">tinggi famili</string>
    <string name="info_fruit_bobot">bobot famili</string>
    <string name="info_fruit_kelemahan">kelemahan famili</string>
    <string name="info_dino_photo">foto Dino</string>
    <string name="info_dino_nama">nama Dino</string>
    <string name="info_dino_deskripsi">deskripsi Dino</string>
    <string name="info_dino_karakteristik">karakteristik Dino</string>
    <string name="info_dino_kelompok">kelompok Dino</string>
    <string name="info_dino_habitat">habitat Dino</string>
    <string name="info_dino_makanan">makanan Dino</string>
    <string name="info_dino_panjang">panjang Dino</string>
    <string name="info_dino_tinggi">tinggi Dino</string>
    <string name="info_dino_bobot">bobot Dino</string>
    <string name="info_dino_kelemahan">kelemahan Dino</string>
    <string-array name="fruit_name">
        <item>Thiago</item>
        <item>Boy Martahan</item>
        <item>Archico</item>
        <item>Gabriel</item>
        <item>Dedi Gabe</item>
        <item>Rafael</item>
        <item>Dwi</item>
        <item>Gerald</item>
    </string-array>
    <string-array name="fruit_icon">
        <item>@drawable/ic_person</item>
        <item>@drawable/ic_person</item>
        <item>@drawable/ic_person</item>
        <item>@drawable/ic_person</item>
        <item>@drawable/ic_person</item>
        <item>@drawable/ic_person</item>
        <item>@drawable/ic_person</item>
        <item>@drawable/ic_person</item>
        <item>@drawable/ic_person</item>
    </string-array>
    <string-array name="fruit_description">
        <item>
            Kelompok ini terdiri dari dua subkelompok utama: Theropoda dan Sauropodomorpha. Theropoda terkenal sebagai dinosaurus karnivora yang mencakup predator terkenal seperti Tyrannosaurus rex dan Velociraptor. Mereka memiliki tubuh yang aerodinamis, cakar-cakar kuat, dan biasanya bipedal. Sauropodomorpha, di sisi lain, adalah dinosaurus herbivora yang besar dengan leher panjang dan ekor yang berat seperti Brachiosaurus dan Diplodocus.
        </item>

        <item>
            Dinosaurus dalam kelompok ini mayoritas adalah herbivora. Mereka memiliki bentuk tubuh yang berbeda-beda, tetapi ciri khasnya adalah rahang berparuh dan gigi-gigi yang sesuai untuk mengunyah tumbuhan. Contoh dari kelompok ini termasuk Triceratops, Stegosaurus, dan Hadrosaurus.
        </item>

        <item>
            Dinosaurus dalam kelompok ini adalah karnivora terkenal. Mereka memiliki cakar yang kuat, gigi tajam, dan tubuh yang aerodinamis. Beberapa yang paling terkenal termasuk Tyrannosaurus rex, Velociraptor, dan Spinosaurus. Mereka seringkali bipedal dan memiliki otot-otot yang kuat.
        </item>

        <item>
            Dinosaurus dalam kelompok ini adalah herbivora yang sangat besar dengan leher panjang, ekor yang berat, dan tubuh yang besar. Mereka biasanya quadrupedal dan memiliki gigi-gigi yang cocok untuk mengunyah makanan tumbuhan. Brachiosaurus, Apatosaurus, dan Diplodocus adalah contohnya.
        </item>

        <item>
            Dinosaurus dalam kelompok ini memiliki tanduk dan lempeng-keping pada tengkorak mereka. Mereka mayoritas adalah herbivora dan beberapa memiliki bentuk tubuh besar dan berat. Triceratops adalah salah satu yang paling terkenal dari kelompok ini.
        </item>

        <item>
            Dinamai dari lempeng-keping pada punggung mereka, stegosauria adalah dinosaurus herbivora dengan punggung yang dilapisi oleh deretan lempeng-keping. Mereka juga memiliki cakar dan ekor bermuncung. Contohnya termasuk Stegosaurus.
        </item>

        <item>
            Dinosaurus dalam kelompok ini memiliki tubuh yang dilapisi oleh cangkang tulang dan seringkali memiliki senjata defensif seperti ekor berat bersenjatakan tonjolan atau klub. Mereka mayoritas adalah herbivora. Contohnya termasuk Ankylosaurus.
        </item>

        <item>
            Meskipun bukan dinosaurus sejati, pterosauria adalah reptil terbang yang hidup pada masa yang sama dengan dinosaurus. Mereka memiliki sayap membranosa yang menghubungkan antara anggota badan depan dan belakang. Beberapa contoh pterosauria adalah Pteranodon dan Quetzalcoatlus.
        </item>

    </string-array>
    <string-array name="fruit_characteristic">
        <item>Mayoritas saurischia adalah dinosaurus berpinggul klasik, yang berarti pinggul mereka mirip dengan kadal modern. Contoh terkenal dari saurischia adalah T-Rex..</item>
        <item>Dinosaurus dalam kelompok ini memiliki pelvis yang mirip dengan burung (ornithischian), dengan rahang yang dilengkapi dengan gigi yang cocok untuk mengunyah tumbuhan..</item>
        <item>Dinosaurus dalam kelompok ini cenderung memiliki tubuh yang ramping dengan kaki yang kuat, gigi yang runcing, dan cakar yang tajam. Mereka biasanya adalah pemangsa..</item>
        <item>Dinosaurs dalam kelompok ini memiliki tubuh besar dengan leher panjang dan ekor yang besar, serta kaki yang kuat. Mereka adalah herbivora..</item>
        <item>Mereka memiliki ciri khas tanduk dan lempeng tulang di tengkorak mereka.</item>
        <item>Mereka memiliki lempeng tulang dan sepasang duri di punggung mereka.</item>
        <item>Mereka memiliki tubuh yang dilengkapi dengan tulang berderet atau cekung, serta tonjolan-tonjolan tulang atau duri untuk pertahanan.</item>
        <item>Reptil terbang dengan saya Pterosaur adalah reptil terbang prasejarah yang memiliki sayap kulit yang terhubung dari jari ke .</item>
    </string-array>
    <string-array name="fruit_kelompok">
        <item>Woii ingat makan, uda masak lauk ayam...</item>
        <item>Woii ingat makan, uda masak lauk ayam...</item>
        <item>Woii ingat makan, uda masak lauk ayam...</item>
        <item>Woii ingat makan, uda masak lauk ayam...</item>
        <item>Woii ingat makan, uda masak lauk ayam...</item>
        <item>Woii ingat makan, uda masak lauk ayam...</item>
        <item>Woii ingat makan, uda masak lauk ayam...</item>
        <item>Woii ingat makan, uda masak lauk ayam...</item>

    </string-array>
    <string-array name="fruit_habitat">
        <item>Mereka tersebar di berbagai habitat, termasuk dataran rendah, hutan, dan dataran tinggi. Beberapa jenis mungkin lebih cenderung ke habitat tertentu, tetapi secara umum dapat dijumpai di berbagai lingkungan.</item>
        <item>Hidup di berbagai habitat tergantung pada spesiesnya, termasuk hutan hujan tropis, dataran banjir, padang rumput, dan dataran rendah.</item>
        <item>Beragam habitat, termasuk hutan, padang rumput, dan dataran terbuka.</item>
        <item>Umumnya hidup di wilayah dataran rendah, dataran banjir, dan hutan-hutan lebat.</item>
        <item>Umumnya ditemukan di dataran terbuka, padang rumput, dan daerah dengan vegetasi yang subur.</item>
        <item>Mungkin hidup di hutan-hutan lebat, wilayah pegunungan, atau padang rumput.</item>
        <item>Biasanya ditemukan di wilayah dataran rendah, dataran banjir, daerah berhutan, dan daerah pesisir.</item>
        <item>Dapat ditemukan di berbagai habitat, termasuk daratan, pesisir, dan lautan. Mereka sering menghuni wilayah yang dekat dengan air untuk memudahkan dalam mencari makanan.</item>
    </string-array>
    <string-array name="fruit_makanan">
        <item>Perilaku saurischia bervariasi tergantung pada spesiesnya. Beberapa mungkin berburu secara berkelompok, sementara yang lain mungkin lebih soliter.</item>
        <item>Mayoritas adalah herbivora, memakan tumbuhan seperti dedaunan, pucuk-pucuk, dan berbagai jenis tanaman.</item>
        <item>Karnivora, memakan hewan lain seperti mamalia kecil, reptil, dan dinosaurus lain.</item>
        <item>Herbivora, biasanya memakan tumbuhan seperti daun, dedaunan, dan pucuk-pucuk.</item>
        <item>Herbivora, memakan tumbuhan seperti dedaunan, pucuk-pucuk, dan tanaman rendah.</item>
        <item>Herbivora, memakan dedaunan, pucuk-pucuk, dan tanaman rendah.</item>
        <item>Herbivora, memakan dedaunan, pucuk-pucuk, dan tanaman rendah. Beberapa mungkin juga mengonsumsi invertebrata kecil.</item>
        <item>
            Meskipun bukan dinosaurus sejati, mereka adalah reptil terbang yang kemungkinan besar memakan ikan, invertebrata air, dan mungkin juga memanfaatkan sumber daya yang tersedia di daratan seperti buah-buahan dan serangga.
        </item>
    </string-array>
    <string-array name="fruit_panjang">
        <item>Saurischia dibagi menjadi dua subkelompok besar: Theropoda (termasuk T-Rex) dan Sauropodomorpha (seperti Brachiosaurus).</item>
        <item>Panjang tubuh beragam tergantung pada spesiesnya. Sebagai contoh, Triceratops memiliki panjang sekitar 7-9 meter, sementara Stegosaurus bisa mencapai panjang sekitar 9 meter.</item>
        <item>Panjang tubuh bervariasi tergantung pada spesiesnya. Contohnya, Tyrannosaurus rex bisa mencapai panjang sekitar 12 meter, sementara Velociraptor biasanya sekitar 2 meter panjangnya.</item>
        <item>Panjang tubuh dapat bervariasi dari sekitar 4 meter (seperti Mussaurus) hingga lebih dari 30 meter (seperti Argentinosaurus).</item>
        <item>Panjang tubuh berkisar dari sekitar 2 hingga 9 meter tergantung pada spesiesnya. Triceratops, salah satu yang terbesar, memiliki panjang sekitar 7-9 meter.</item>
        <item>Panjang tubuh biasanya berkisar antara 4 hingga 9 meter tergantung pada spesiesnya. Sebagai contoh, Stegosaurus biasanya memiliki panjang sekitar 9 meter.</item>
        <item>Panjang tubuh juga bervariasi antara spesiesnya. Beberapa ankylosaur mungkin memiliki panjang sekitar 4 hingga 9 meter, seperti Ankylosaurus.</item>
        <item>
            Panjang tubuh bervariasi tergantung pada spesiesnya. Contohnya, Pteranodon biasanya memiliki rentang sayap sekitar 7 meter, sedangkan Quetzalcoatlus bisa mencapai panjang sayap sekitar 10-11 meter.
        </item>
    </string-array>
    <string-array name="fruit_tinggi">
        <item>Tingginya berkisar dari sekitar 2 hingga 6 meter tergantung pada spesiesnya.</item>
        <item>Tingginya berkisar dari sekitar 2 hingga 6 meter tergantung pada spesiesnya.</item>
        <item>Tingginya berkisar dari sekitar 2 hingga 6 meter tergantung pada spesiesnya.</item>
        <item>Tingginya bisa mencapai lebih dari 10 meter, tergantung pada spesiesnya.</item>
        <item>Tingginya berkisar dari sekitar 2 hingga 4 meter tergantung pada spesiesnya.</item>
        <item>Tingginya berkisar dari sekitar 2 hingga 5 meter tergantung pada spesiesnya.</item>
        <item>Tingginya berkisar dari sekitar 1 hingga 4 meter tergantung pada spesiesnya.</item>
        <item>Tingginya berkisar dari sekitar 0.3 hingga 3 meter tergantung pada spesiesnya.</item>
    </string-array>
</resources>