<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    app:cardBackgroundColor="#F8F8F8">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/ivItemFruit"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/circle_background"
            android:contentDescription="@string/info_fruit_icon"
            android:padding="8dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ankylosauriaphoto"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/tvItemFruit"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivItemFruit"
            android:layout_alignStart="@+id/ivItemFruit"
            android:layout_marginStart="115dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="-63dp"
            android:layout_toRightOf="@id/ivItemFruit"
            android:gravity="center_vertical"
            android:text="@string/info_fruit_name"
            android:textColor="#333333"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cvItemFruit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvItemFruit"
            android:layout_alignStart="@+id/tvItemFruit"
            android:layout_marginStart="0dp"
            android:layout_marginTop="-1dp"
            android:justificationMode="inter_word"
            android:paddingBottom="20dp"
            android:text="@string/info_fruit_kelompok"
            android:textColor="#333333"
            android:textSize="16sp" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>
